fixed snapshot issue

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <div class="news-ticker">
     <div class="ticker-content" id="ticker">
-      Welcome to CCL 2025 Draft! Click on a player from the pool to assign to the next team in the draft order.
+      Welcome to the Draft! Click on a player from the pool to assign to the next team in the draft order.
     </div>
   </div>
   
